@@ -1,3 +1,8 @@
+2013-03-19  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tclWinFile.c: [Bug 2893771]: file stat fails on locked files
+	on win32.
+
 2013-03-18  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/cmdAH.test (cmdAH-19.12): [Bug 3608360]: Added test to ensure
